# grade_library

./: .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  books.csv  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/books/: admin.py  managers.py  models.py  serializers.py  signals.py  sitemaps.py  tasks.py  urls.py  validators.py  views.py
app/books/migrations/: 0001_initial.py  0002_alter_author_options_alter_book_options_and_more.py  0003_alter_book_isbn.py
app/books/templates/admin/: import_csv_form.html
app/books/templates/books/: index.html
app/books/templates/books/author/: detail.html
app/books/templates/books/books/: detail.html
app/books/templates/books/genre/: detail.html
app/books/templates/books/includes/: _book_list.html
app/locale/en/LC_MESSAGES/: django.mo  django.po
app/locale/ru/LC_MESSAGES/: django.po
app/templates/: base.html
app/templates/admin/: base_site.html
